# MenuRisk

./: .env.example  .gitignore  Dockerfile  LICENSE  METHODOLOGY.md  README.md  VISUALIZATION_GUIDE.md  app.py  config.py  docker-compose.yml  generate_sample_data.py  install_and_test.sh  menu_price_model.py  open_charts.py  open_visualizations.py  project_config.py  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests_and_visualize.py  test_menu_price_model.py  test_refactoring.py  view_visualizations.html  visualize_results.py
.github/workflows/: ci.yml
config/: __init__.py  settings.py
data/: template.csv
examples/: complete_workflow.py
notebooks/: MenuRisk_Demo.ipynb  model_comparison_example.py
src/: __init__.py
src/api/: app.py
src/data/: __init__.py  feature_engineer.py  loader.py  preprocessor.py  validator.py
src/finance/: __init__.py  portfolio_analytics.py  risk_metrics.py  risk_metrics_v2.py
src/models/: __init__.py  demand_forecaster.py  model_comparison.py  model_registry.py  optimizer.py  price_optimizer.py
src/utils/: __init__.py  canadian.py  metrics.py
src/visualization/: __init__.py  charts.py
static/charts/: .gitkeep
templates/: base.html  index.html
tests/: __init__.py  conftest.py  generate_sample_data.py  test_data_leakage.py  test_data_loader.py  test_demand_forecaster.py  test_menu_price_model.py  test_model_accuracy.py  test_model_comparison.py  test_optimizer.py  test_risk_metrics.py  test_validator.py
